Fix small issue with dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -41,6 +41,7 @@ body {
     margin: 0;
     width: 100vw;
     overflow-x: hidden;
+    color: white;
 }
 
 main {
